--- a/src/components/Try.css
+++ b/src/components/Try.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  background-color: black;
 }
 
 .card {
@@ -11,8 +12,8 @@
   width: 300px;
   height: 300px;
   border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0, 0, 0, 0.25),
-    -5px -5px 30px 7px rgba(0, 0, 0, 0.22);
+  box-shadow: 5px 5px 30px 7px rgba(255, 248, 248, 0.25),
+    -5px -5px 30px 7px rgba(247, 241, 241, 0.22);
   cursor: pointer;
   transition: 0.4s;
 }
@@ -27,7 +28,7 @@
   width: inherit;
   height: inherit;
   border-radius: 40px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .card .card_title {
